@@ -29,6 +29,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 import org.apache.jackrabbit.oak.api.PropertyValue;
@@ -105,7 +106,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import org.apache.jackrabbit.guava.common.collect.AbstractIterator;
-import org.apache.jackrabbit.guava.common.collect.Ordering;
 
 /**
  * Represents a parsed query.
@@ -124,26 +124,21 @@ public class QueryImpl implements Query {
 
     private boolean potentiallySlowTraversalQueryLogged;
 
-    private static final Ordering<QueryIndex> MINIMAL_COST_ORDERING = new Ordering<QueryIndex>() {
-        @Override
-        public int compare(QueryIndex left, QueryIndex right) {
-            return Double.compare(left.getMinimumCost(), right.getMinimumCost());
-        }
-    };
+    private static final Comparator<QueryIndex> MINIMAL_COST_ORDERING = Comparator.comparingDouble(QueryIndex::getMinimumCost);
 
     SourceImpl source;
     private String statement;
-    final HashMap<String, PropertyValue> bindVariableMap = new HashMap<String, PropertyValue>();
+    final HashMap<String, PropertyValue> bindVariableMap = new HashMap<>();
     
     /**
      * The map of indexes (each selector uses one index)
      */
-    final HashMap<String, Integer> selectorIndexes = new HashMap<String, Integer>();
+    final HashMap<String, Integer> selectorIndexes = new HashMap<>();
     
     /**
      * The list of selectors of this query. For a join, there can be multiple selectors.
      */
-    final ArrayList<SelectorImpl> selectors = new ArrayList<SelectorImpl>();
+    final ArrayList<SelectorImpl> selectors = new ArrayList<>();
     
     ConstraintImpl constraint;
 
@@ -608,7 +603,7 @@ public class QueryImpl implements Query {
                                     .replaceFirst("(?i)\\bexplain\\s+", ""))
                     },
                     null, null);
-            return Arrays.asList(r).iterator();
+            return List.of(r).iterator();
         }
         if (LOG.isDebugEnabled()) {
             logDebug("query execute " + statement);
@@ -736,13 +731,13 @@ public class QueryImpl implements Query {
 
         // use a greedy algorithm
         SourceImpl result = null;
-        Set<SourceImpl> available = new HashSet<SourceImpl>();
+        Set<SourceImpl> available = new HashSet<>();
         // the query is only slow if all possible join orders are slow
         // (in theory, due to using the greedy algorithm, a query might be considered
         // slow even thought there is a plan that doesn't need to use traversal, but
         // only for 3-way and higher joins, and only if traversal is considered very fast)
         boolean isPotentiallySlowJoin = true;
-        while (sources.size() > 0) {
+        while (!sources.isEmpty()) {
             int bestIndex = 0;
             double bestCost = Double.POSITIVE_INFINITY;
             ExecutionPlan bestPlan = null;
@@ -781,10 +776,8 @@ public class QueryImpl implements Query {
             return last;
         }
         List<SourceImpl> selectors = result.getInnerJoinSelectors();
-        Set<SourceImpl> oldSelectors = new HashSet<SourceImpl>();
-        oldSelectors.addAll(selectors);
-        Set<SourceImpl> newSelectors = new HashSet<SourceImpl>();
-        newSelectors.addAll(selectors);
+        Set<SourceImpl> oldSelectors = new HashSet<>(selectors);
+        Set<SourceImpl> newSelectors = new HashSet<>(selectors);
         newSelectors.add(last);
         for (JoinConditionImpl j : conditions) {
             // only join conditions can now be evaluated,
@@ -814,9 +807,9 @@ public class QueryImpl implements Query {
      * query iterator to lazily execute and return counts.
      */
     abstract static class MeasuringIterator extends AbstractIterator<ResultRowImpl> {
-        private Iterator<ResultRowImpl> delegate;
-        private Query query;
-        private List<ResultRowImpl> results;
+        private final Iterator<ResultRowImpl> delegate;
+        private final Query query;
+        private final List<ResultRowImpl> results;
         private boolean init;
 
         MeasuringIterator(Query query, Iterator<ResultRowImpl> delegate) {
@@ -1054,7 +1047,7 @@ public class QueryImpl implements Query {
 
     @Override
     public List<String> getBindVariableNames() {
-        return new ArrayList<String>(bindVariableMap.keySet());
+        return new ArrayList<>(bindVariableMap.keySet());
     }
 
     @Override
@@ -1092,8 +1085,8 @@ public class QueryImpl implements Query {
 
         // Sort the indexes according to their minimum cost to be able to skip the remaining indexes if the cost of the
         // current index is below the minimum cost of the next index.
-        List<? extends QueryIndex> queryIndexes = MINIMAL_COST_ORDERING
-                .sortedCopy(indexProvider.getQueryIndexes(rootState));
+        List<? extends QueryIndex> queryIndexes = indexProvider.getQueryIndexes(rootState).stream()
+                .sorted(MINIMAL_COST_ORDERING).collect(Collectors.toList());
         List<OrderEntry> sortOrder = getSortOrder(filter); 
         for (int i = 0; i < queryIndexes.size(); i++) {
             QueryIndex index = queryIndexes.get(i);
@@ -1137,7 +1130,8 @@ public class QueryImpl implements Query {
                         String msg = String.format("cost for [%s] of type (%s) with plan [%s] is %1.2f", p.getPlanName(), indexName, plan, c);
                         logDebug(msg);
                     }
-                    if (c < bestCost) {
+                    // In case of cost being the same, chose the index with the lowest name by alphabetic order
+                    if (c < bestCost || (c == bestCost && bestPlan != null && p.getPlanName().compareTo(bestPlan.getPlanName()) < 0 )) {
                         almostBestCost = bestCost;
                         almostBestIndex = bestIndex;
                         almostBestPlan = bestPlan;
@@ -1296,7 +1290,7 @@ public class QueryImpl implements Query {
         if (orderings == null) {
             return null;
         }
-        ArrayList<OrderEntry> sortOrder = new ArrayList<OrderEntry>();
+        ArrayList<OrderEntry> sortOrder = new ArrayList<>();
         for (OrderingImpl o : orderings) {
             DynamicOperandImpl op = o.getOperand();
             OrderEntry e = op.getOrderEntry(filter.getSelector(), o);
@@ -1305,7 +1299,7 @@ public class QueryImpl implements Query {
             }
             sortOrder.add(e);
         }
-        if (sortOrder.size() == 0) {
+        if (sortOrder.isEmpty()) {
             return null;
         }
         return sortOrder;
@@ -1505,7 +1499,7 @@ public class QueryImpl implements Query {
         } else {
             recomputed.append(original.substring(0, origUpper.indexOf(where) + whereOffset));
             recomputed.append(query.getConstraint());
-            if (origUpper.indexOf(orderBy) > -1) {
+            if (origUpper.contains(orderBy)) {
                 recomputed.append(original.substring(origUpper.indexOf(orderBy)));
             }
         }
